--- a/Site/cadastro.html
+++ b/Site/cadastro.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MuscleMap | Cadastro</title>
+    <link rel="shortcut icon" type="imagex/png" href="img/logo_musclemap.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="head">
        <div class="logos"> 
-            <div class="logo">Muscle<span class="mlogo">Map</span></div>
-            <img class="imglogo" src="possivel_logo_musclemap2-removebg-preview.png" alt="">
+            <a href="index.html" class="logo">Muscle<span class="mlogo">Map</span></a>
+            <img class="imglogo" src="img/logo_musclemap.png" alt="">
         </div>
             <div class="buttons">
-                <button>Calculadora</button>
-                <button>Cadastrar</button>
-                <button>Login</button>
+                <a href="">Calculadora</a>
+                <a href="cadastro.html">Cadastrar</a>
+                <a href="login.html">Login</a>
             </div>
 
         </div>
